# Research

./: .gitignore  CLAUDE.md  modal_app.py  pyproject.toml
.spec-dev/commit_msg/: history.md
.spec-dev/tickets/: future-experiments.md  ticket_001_scaffolding-and-config.md  ticket_002_data-pipeline.md  ticket_003_model-and-training.md  ticket_004_evaluation-and-analysis.md  ticket_005_production-runs.md
configs/: emb_only_r16.yaml  emb_only_r8.yaml  joint_single_r16.yaml  joint_single_r8.yaml  rank_only_r16.yaml  rank_only_r8.yaml
initial-research-idea/: research-skills-analysis.md
initial-research-idea/initial_draft/: _________Above in the file is a research proposal,.md  feedback.md  research_proposal_draft.md  unified-embedding-reranking-moe-lora.md
initial-research-idea/prompts/: prompts.md
initial-research-idea/research-proposal/: research-proposal-v2.md  research-proposal-zh.md  research-proposal.md
initial-research-idea/research-review/: deep-research-findings.md  review-and-recommendations.md
notebooks/: run_on_modal.ipynb
scripts/: analyze_results.py  download_data.py  evaluate.py  run_experiment1.py  train.py
src/unimoe/: __init__.py  config.py
src/unimoe/analysis/: compare.py
src/unimoe/data/: collators.py  msmarco.py  templates.py
src/unimoe/evaluation/: embedding_eval.py  model_wrappers.py  reranking_eval.py
src/unimoe/model/: lora_model.py
src/unimoe/training/: losses.py  trainer.py
tests/: test_config.py  test_data.py  test_evaluation.py  test_gradient_conflict.py  test_losses.py  test_model.py  test_training_step.py
